# fhir

./: .hlint.yaml  CHANGELOG.md  CLAUDE.md  README.md  cabal.project  fhir.cabal  fourmolu.yaml
.github/workflows/: ci.yml  haskell.yml
fhir-json/: CHANGELOG.md  fhir-json.cabal
fhir-types/: CHANGELOG.md  fhir-types.cabal
fhir-types/src/FHIR/Types/: Complex.hs  Meta.hs  Primitives.hs  Resource.hs
fhir-types/src/FHIR/Types/Complex/: Address.hs  Attachment.hs  CodeableConcept.hs  Coding.hs  ContactPoint.hs  Element.hs  Extension.hs  HumanName.hs  Identifier.hs  Narrative.hs  Period.hs  Quantity.hs  Range.hs  Ratio.hs  Reference.hs
fhir-types/test/: Main.hs
fhir-types/test/FHIR/Types/Complex/: AttachmentSpec.hs
fhir-validation/: CHANGELOG.md  fhir-validation.cabal
fhir-validation/app/: Main.hs
fhir-validation/src/FHIR/Validation/: Api.hs  Views.hs
fhir-xml/: CHANGELOG.md  fhir-xml.cabal
scripts/: format.sh
