cabal-version:      3.0
name:               fhir-types
version:            0.1.0.0
synopsis:           FHIR Types
homepage:           https://github.com/ih1d/fhir
author:             Isaac Hiram Lopez Diaz
maintainer:         isaac.lopez@upr.edu
category:           Data
build-type:         Simple

common warnings
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

library
    import:           warnings
    exposed-modules:
        FHIR.Types.Primitives
        FHIR.Types.Resource
        FHIR.Types.Meta
        FHIR.Types.Complex.Address
        FHIR.Types.Complex.Attachment
        FHIR.Types.Complex.CodeableConcept
        FHIR.Types.Complex.Coding
        FHIR.Types.Complex.ContactPoint
        FHIR.Types.Complex.Element
        FHIR.Types.Complex.Extension
        FHIR.Types.Complex.HumanName
        FHIR.Types.Complex.Identifier
        FHIR.Types.Complex.Narrative
        FHIR.Types.Complex.Period
        FHIR.Types.Complex.Quantity
        FHIR.Types.Complex.Range
        FHIR.Types.Complex.Ratio
        FHIR.Types.Complex.Reference
    default-extensions:
        DeriveGeneric
        LambdaCase
        OverloadedStrings
        RecordWildCards
    build-depends:    base ^>=4.18.3.0
                    , text
                    , aeson
                    , time
                    , uuid
                    , scientific
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite fhir-types-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        FHIR.Types.Complex.AttachmentSpec
    build-depends:
        base ^>=4.18.3.0
      , fhir-types
      , hspec
      , aeson
      , text
      , bytestring
